# sample-sap-genai-hub-bedrock

./: .gitignore  01-consume-bedrock-models-via-genaihub.ipynb  02-tool-calling-via-amazon-nova-genaihub.ipynb  03-agentic-workflows-with-langchain-langgraph-via-genaihub.ipynb  04-strands-agent-with-sap-genai-hub.ipynb  05-strands-agent-deep-research.ipynb  06-strands-agents-mcp-financial-intelligence.ipynb  README.md  analytics_reporting_server.py  document_analysis_server.py  financial_mcp_server.py  pyproject.toml
.ipynb_checkpoints/: 06-strands-agents-mcp-financial-intelligence-checkpoint.ipynb
util/: strands_bedrock_sap_genai_hub.py  transform_config.py
